changes in the error handler
