# docs/swagger.json
@@ -74,7 +74,7 @@
                 }
             }
         },
-        "/admin/create/{id}": {
+        "/admin/create-task/{id}": {
             "post": {
                 "security": [
                     {
@@ -138,7 +138,7 @@
                 }
             }
         },
-        "/admin/createForAdmin": {
+        "/admin/crete-task": {
             "post": {
                 "security": [
                     {
@@ -197,7 +197,7 @@
                 }
             }
         },
-        "/admin/delete/{userId}/{taskId}": {
+        "/admin/delete-task/{userId}/{taskId}": {
             "delete": {
                 "security": [
                     {
@@ -259,7 +259,7 @@
                 }
             }
         },
-        "/admin/deleteUser/{userId}": {
+        "/admin/delete-user/{userId}": {
             "delete": {
                 "security": [
                     {
@@ -326,184 +326,7 @@
                 }
             }
         },
-        "/admin/detail/{userID}": {
-            "get": {
-                "security": [
-                    {
-                        "apikeyauth": []
-                    }
-                ],
-                "description": "Menampilkan daftar tugas untuk pengguna tertentu dengan paginasi",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "task"
-                ],
-                "summary": "View Tasks By User",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "ID Pengguna",
-                        "name": "userID",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "type": "integer",
-                        "description": "Nomor halaman (default: 1)",
-                        "name": "page",
-                        "in": "query"
-                    },
-                    {
-                        "type": "integer",
-                        "description": "Jumlah item per halaman (default: 5)",
-                        "name": "perPage",
-                        "in": "query"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/entity.Tasks"
-                            }
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/respError.ErrorResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/respError.ErrorResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/admin/detailUser/{id}": {
-            "get": {
-                "security": [
-                    {
-                        "apikeyauth": []
-                    }
-                ],
-                "description": "Menampilkan daftar tugas untuk pengguna tertentu dengan paginasi",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "auth"
-                ],
-                "summary": "View Tasks By User",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "ID Pengguna",
-                        "name": "userID",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/entity.User"
-                            }
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/respError.ErrorResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/respError.ErrorResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/admin/detailUserOrTask": {
-            "get": {
-                "security": [
-                    {
-                        "apikeyauth": []
-                    }
-                ],
-                "description": "Melihat detail pengguna atau tugas berdasarkan ID pengguna atau ID tugas (salah satu atau keduanya).",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "task"
-                ],
-                "summary": "View User or Task by ID",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "ID Pengguna (opsional)",
-                        "name": "userId",
-                        "in": "query"
-                    },
-                    {
-                        "type": "integer",
-                        "description": "ID Tugas (opsional)",
-                        "name": "taskId",
-                        "in": "query"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Data pengguna atau tugas",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": true
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/respError.ErrorResponse"
-                        }
-                    },
-                    "401": {
-                        "description": "Unauthorized",
-                        "schema": {
-                            "$ref": "#/definitions/respError.ErrorResponse"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "$ref": "#/definitions/respError.ErrorResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/admin/update/task/{taskID}": {
+        "/admin/update-task/{taskID}": {
             "patch": {
                 "security": [
                     {
@@ -573,7 +396,7 @@
                 }
             }
         },
-        "/admin/update/{userID}/{taskID}": {
+        "/admin/update-task/{userID}/{taskID}": {
             "patch": {
                 "security": [
                     {
@@ -637,6 +460,183 @@
                     },
                     "404": {
                         "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/respError.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/respError.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/admin/user-detail/{id}": {
+            "get": {
+                "security": [
+                    {
+                        "apikeyauth": []
+                    }
+                ],
+                "description": "Menampilkan daftar tugas untuk pengguna tertentu dengan paginasi",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "View Tasks By User",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "ID Pengguna",
+                        "name": "userID",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/entity.User"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/respError.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/respError.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/admin/user-or-task-details": {
+            "get": {
+                "security": [
+                    {
+                        "apikeyauth": []
+                    }
+                ],
+                "description": "Melihat detail pengguna atau tugas berdasarkan ID pengguna atau ID tugas (salah satu atau keduanya).",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "task"
+                ],
+                "summary": "View User or Task by ID",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "ID Pengguna (opsional)",
+                        "name": "userId",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "ID Tugas (opsional)",
+                        "name": "taskId",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Data pengguna atau tugas",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/respError.ErrorResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/respError.ErrorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/respError.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/admin/user-tasks/{userID}": {
+            "get": {
+                "security": [
+                    {
+                        "apikeyauth": []
+                    }
+                ],
+                "description": "Menampilkan daftar tugas untuk pengguna tertentu dengan paginasi",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "task"
+                ],
+                "summary": "View Tasks By User",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "ID Pengguna",
+                        "name": "userID",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Nomor halaman (default: 1)",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Jumlah item per halaman (default: 5)",
+                        "name": "perPage",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/entity.Tasks"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
                         "schema": {
                             "$ref": "#/definitions/respError.ErrorResponse"
                         }
